--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "@mdi/js",
   "version": "6.5.95",
   "description": "Dist for Material Design Icons for JS/TypeScript",
-  "main": "commonjs/mdi.js",
   "module": "mdi.js",
   "types": "mdi.d.ts",
   "sideEffects": false,
   "scripts": {
-    "build": "npm update && npm install && npm run buildjs && npm run es5 && npm run commonjs",
+    "build": "npm update && npm install && npm run buildjs && npm run es5",
     "buildjs": "node build.js",
     "es5": "tsc -d mdi.ts --target es5 --module es2015",
-    "commonjs": "tsc -d mdi.ts --outDir commonjs",
     "umd": "tsc -d mdi.ts --module UMD --outDir umd",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
